--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
