--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
+    "chart.js": "^4.1.1",
     "classnames": "^2.3.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
     "postcss": "^8.4.20",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
     "sass": "^1.57.0",
