--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "@auth0/nextjs-auth0": "^2.1.0",
     "@next/font": "13.0.7",
     "@types/node": "18.11.17",
@@ -19,6 +20,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "graphql": "^16.6.0",
     "next": "13.0.7",
     "postcss": "^8.4.20",
     "react": "18.2.0",
