--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,4 @@ AUTH0_CLIENT_ID='yuuILCgYsGrhH61UigfsZ6vRnicOPUXy'
 AUTH0_CLIENT_SECRET='F0fNK9KwhKKE_qwOTzX8HRLRMBA-HDgJMspsfUbv4ct4BfEFXHlT2MZCVSMnzpyZ'
 AUTH0_AUDIENCE=https://prod.vessels.deeprender.ai/
 AUTH0_SCOPE=openid profile email offline_access do:anything
+LOCAL_SERVER_URL=http://localhost:3000/api
