--- a/.env.local
+++ b/.env.local
@@ -3,6 +3,7 @@ AUTH0_BASE_URL='http://localhost:3000'
 AUTH0_ISSUER_BASE_URL='https://deeprender.eu.auth0.com'
 AUTH0_CLIENT_ID='yuuILCgYsGrhH61UigfsZ6vRnicOPUXy'
 AUTH0_CLIENT_SECRET='F0fNK9KwhKKE_qwOTzX8HRLRMBA-HDgJMspsfUbv4ct4BfEFXHlT2MZCVSMnzpyZ'
-AUTH0_AUDIENCE=https://prod.vessels.deeprender.ai/
+AUTH0_AUDIENCE=https://staging.vessels.deeprender.ai
 AUTH0_SCOPE=openid profile email offline_access do:anything
 BACKEND_URL=https://staging.vessels.deeprender.ai/graphql
+WEBSOCKET_URL=wss://staging.wss.vessels.deeprender.ai/graphql
