--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.11.3",
     "next": "13.0.7",
     "postcss": "^8.4.20",
     "react": "18.2.0",
